--- a/cms/templates/widgets/header.html
+++ b/cms/templates/widgets/header.html
@@ -122,6 +122,9 @@
                   <li class="nav-item nav-course-tools-export">
                     <a href="${export_url}">${_("Export")}</a>
                   </li>
+                  <li class="nav-item nav-course-tools-export-git">
+                    <a href="${reverse('export_scos', kwargs=dict(course_key_string=unicode(course_key)))}">${_("Export to SCOS")}</a>
+                  </li>
                   % if settings.FEATURES.get('ENABLE_EXPORT_GIT') and context_course.giturl:
                   <li class="nav-item nav-course-tools-export-git">
                     <a href="${reverse('export_git', kwargs=dict(course_key_string=unicode(course_key)))}">${_("Export to Git")}</a>
