--- a/lms/templates/courseware/course_about.html
+++ b/lms/templates/courseware/course_about.html
@@ -2,7 +2,8 @@
 <%!
 from django.utils.translation import ugettext as _
 from django.utils.translation import pgettext
-from django.urls import reverse
+from django.utils import timezone
+from django.core.urlresolvers import reverse
 from courseware.courses import get_course_about_section
 from django.conf import settings
 from six import text_type
@@ -10,7 +11,11 @@ from edxmako.shortcuts import marketing_link
 from openedx.core.djangolib.markup import HTML
 from openedx.core.lib.courses import course_image_url
 from six import string_types
+from openedx.features.scos.conf import ENV, set_environment
+from openedx.features.scos.roo import get_widget_url
+from openedx.features.scos.courses import get_course_scos_id
 %>
+
 
 <%inherit file="../main.html" />
 <%block name="headextra">
@@ -101,7 +106,18 @@ from six import string_types
 
   })(this)
   </script>
-
+  <style>
+    @media screen and (min-width: 769px) and (max-width: 950px) {
+        .mobile-hide {
+            display: none;
+        }
+    }
+    @media screen and (max-width: 350px) {
+        .mobile-hide {
+            display: none;
+        }
+    }
+  </style>
   <script src="${static.url('js/course_info.js')}"></script>
 </%block>
 
@@ -118,12 +134,10 @@ from six import string_types
           <h1>
             ${course.display_name_with_default_escaped}
           </h1>
-          <br />
-          <span>${course.display_org_with_default | h}</span>
         </div>
 
         <div class="main-cta">
-        %if user.is_authenticated and registered:
+        %if user.is_authenticated() and registered:
           %if show_courseware_link:
             <a href="${course_target}">
           %endif
@@ -131,7 +145,7 @@ from six import string_types
           <span class="register disabled">${_("You are enrolled in this course")}</span>
 
           %if show_courseware_link:
-            <strong>${_("View Course")}</strong>
+            <strong class="view-course">${_("View Course")}</strong>
             </a>
           %endif
 
@@ -144,7 +158,7 @@ from six import string_types
             ${_("Course is full")}
           </span>
         % elif invitation_only and not can_enroll:
-          <span class="register disabled">${_("Enrollment in this course is by invitation only")}</span>
+          <span style="cursor: pointer" onclick="window.location = 'mailto:info@enstructo.com?subject=${course.display_name_with_default_escaped} Enrollment Request&body=Please include the email associated with your Enstructo account (if different from reply address) and a brief description of why you are interested in this Course'" class="register disabled"><span style="text-transform:uppercase">${_("This course is invitation only")}</span> <br/><span style="font-size:80%;margin-top:4px;">click to request an invitation</span></span>
         ## Shib courses need the enrollment button to be displayed even when can_enroll is False,
         ## because AnonymousUsers cause can_enroll for shib courses to be False, but we need them to be able to click
         ## so that they can register and become a real user that can enroll.
@@ -152,7 +166,7 @@ from six import string_types
           <span class="register disabled">${_("Enrollment is Closed")}</span>
         %elif can_add_course_to_cart:
           <%
-          if user.is_authenticated:
+          if user.is_authenticated():
             reg_href = "#"
             reg_element_id = "add_to_cart_post"
           else:
@@ -179,7 +193,7 @@ from six import string_types
             else:
               href_class = "register"
           %>
-          <a href="${reg_href}" class="${href_class}">
+          <a href="${reg_href}" class="${href_class} enroll">
             ${_("Enroll in {course_name}").format(course_name=course.display_number_with_default) | h}
           </a>
           <div id="register_error"></div>
@@ -187,6 +201,7 @@ from six import string_types
         </div>
 
       </section>
+      <section class="media media-desktop">
       % if get_course_about_section(request, course, "video"):
       <a href="#video-modal" class="media" rel="leanModal">
         <div class="hero">
@@ -201,26 +216,85 @@ from six import string_types
         </div>
       </div>
       % endif
+      </section>
     </div>
       </div>
   </header>
   </%block>
 
   <div class="container">
-
     <%block name="course_about_details">
     <div class="details">
       % if staff_access and studio_url is not None:
         <div class="wrap-instructor-info studio-view">
-          <a class="instructor-info-action" href="${studio_url}">${_("View About Page in studio")}</a>
+          <a class="instructor-info-action" href="${studio_url}">${_("View About Page in Creator Portal")}</a>
         </div>
       % endif
-
+      <section class="media media-mobile" style="display:none;">
+        % if get_course_about_section(request, course, "video"):
+        <a href="#video-modal" class="media" rel="leanModal">
+          <div class="hero">
+            <img src="${course_image_urls['large']}" alt="" />
+            <div class="play-intro"></div>
+          </div>
+        </a>
+        %else:
+        <div class="media">
+          <div class="hero">
+            <img src="${course_image_urls['large']}" alt="" />
+          </div>
+        </div>
+        % endif
+      </section>
       <div class="inner-wrapper">
         ${get_course_about_section(request, course, "overview")}
       </div>
+      <div class="media">
+        ${get_course_about_section(request, course, "short_description")}
+      </div>
+      <div class="inner-wrapper">
+        ${get_course_about_section(request, course, "description")}
+      </div>
+      <div class="inner-wrapper">
+        ${get_course_about_section(request, course, "faq")}
+      </div>
+      <div class="inner-wrapper">
+        ${get_course_about_section(request, course, "more_info")}
+      </div>
+      <div class="inner-wrapper">
+        ${get_course_about_section(request, course, "textbook")}
+      </div>
+      <div class="inner-wrapper">
+        ${get_course_about_section(request, course, "effort")}
+      </div>
+      <div class="inner-wrapper">
+        ${get_course_about_section(request, course, "prerequisites")}
+      </div>
+      <div class="inner-wrapper">
+        ${get_course_about_section(request, course, "about_sidebar_html")}
+      </div>
+
+      <!-- 'short_description',
+      'description',
+      'key_dates',
+      'video',
+      'course_staff_short',
+      'course_staff_extended',
+      'requirements',
+      'syllabus',
+      'textbook',
+      'faq',
+      'more_info',
+      'overview',
+      'effort',
+      'end_date',
+      'prerequisites',
+      'about_sidebar_html',
+      'ocw_links' -->
     </div>
     </%block>
+
+
 
     <div class="course-sidebar">
       <div class="course-summary">
@@ -232,11 +306,15 @@ from six import string_types
           <li class="important-dates-item"><span class="icon fa fa-info-circle" aria-hidden="true"></span><p class="important-dates-item-title">${_("Course Number")}</p><span class="important-dates-item-text course-number">${course.display_number_with_default | h}</span></li>
           % if not course.start_date_is_still_default:
               <%
-                  course_start_date = course.advertised_start or course.start
+                  course_start_date = course.start
+                  if course.start > timezone.now():
+                      date_string = u"Starts"
+                  else:
+                      date_string = u"Launched"
               %>
             <li class="important-dates-item">
               <span class="icon fa fa-calendar" aria-hidden="true"></span>
-              <p class="important-dates-item-title">${_("Classes Start")}</p>
+              <p class="important-dates-item-title"><span class="mobile-hide">Course </span>${date_string}</p>
               % if isinstance(course_start_date, string_types):
                   <span class="important-dates-item-text start-date">${course_start_date}</span>
               % else:
@@ -269,17 +347,28 @@ from six import string_types
             % endif
 
           % if get_course_about_section(request, course, "effort"):
-            <li class="important-dates-item"><span class="icon fa fa-pencil" aria-hidden="true"></span><p class="important-dates-item-title">${_("Estimated Effort")}</p><span class="important-dates-item-text effort">${get_course_about_section(request, course, "effort")}</span></li>
+            <% 
+              cpe = get_course_about_section(request, course, "effort")
+              try:
+                  cpe_int = int(cpe)
+              except:
+                  cpe_int = False
+            %>
+            % if cpe_int:
+              <li class="important-dates-item"><span class="icon fa fa-certificate" aria-hidden="true"></span><p class="important-dates-item-title">${_("CPE Hours")}</p><span class="important-dates-item-text effort">${cpe_int}</span></li>
+            % endif:
           % endif
 
           ##<li class="important-dates-item"><span class="icon fa fa-clock-o" aria-hidden="true"></span><p class="important-dates-item-title">${_('Course Length')}</p><span class="important-dates-item-text course-length">${_('{number} weeks').format(number=15)}</span></li>
 
           %if course_price and (can_add_course_to_cart or is_cosmetic_price_enabled):
-            <li class="important-dates-item">
-              <span class="icon fa fa-money" aria-hidden="true"></span>
-              <p class="important-dates-item-title">${_("Price")}</p>
-              <span class="important-dates-item-text">${course_price}</span>
-            </li>
+            % if course_price != "Free":
+              <li class="important-dates-item">
+                <span class="icon fa fa-money" aria-hidden="true"></span>
+                <p class="important-dates-item-title">${_("Price")}</p>
+                <span class="important-dates-item-text">${course_price}</span>
+              </li>
+            % endif
           %endif
 
           % if pre_requisite_courses:
@@ -327,14 +416,17 @@ from six import string_types
         </div>
     </div>
       %endif
+    <%include file="reviews.html" />
 
-    % if sidebar_html_enabled:
-      % if get_course_about_section(request, course, "about_sidebar_html"):
-        <section class="about-sidebar-html">
-          ${get_course_about_section(request, course, "about_sidebar_html")}
-        </section>
-      % endif
+<%
+course_id = text_type(course.id)
+%>
+
+    %if get_course_scos_id(course_id):
+<span>Отзывы из СЦОС:</span>
+    <iframe class="online-edu-course-replies" src=${get_widget_url(course_id)}></iframe>
     %endif
+
   </div>
 
   </div>
